--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 				Звіт про виконання завдань з курсу
 				<p><a href="example01.html" target="_blank">Приклад 01</a>	
 				<p><a href="example02.html" target="_blank">Приклад 02</a>
-				<p><a href="ARindex.html" target="_blank">Домашнє завдання першого тижня</a>			
+				<p><a href="ARindex.html" target="_blank">Домашнє завдання 1 тижня</a>	
+				<p><a href="ARindex.html" target="_blank">Домашнє завдання 2 тижня</a>		
 		</body>
 </html>
