--- a/ARindex.html
+++ b/ARindex.html
@@ -7,11 +7,11 @@
  			<a-sky color="grey"></a-sky>
 			<a-torus position="-2 1 -5" color="green" radius="1.2" animation="property: components.material.material.color;
 type: color; from: green; to: red; loop: true; dur: 10000"></a-torus>
-			<a-plane src="https://raw.githubusercontent.com/aframevr/sampleassets/master/assets/images/illustration/758pxCanestra_di_frutta_(Caravaggio).jpg"width="7" height="7" rotation="50 0 0" position="-2 -2 -5" color="purple"></a-plane>
+			<a-plane  "width="7" height="7" rotation="50 0 0" position="-2 -2 -5" color="purple"></a-plane>
 			<a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
 			<a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
 			<a-torus-knot color="orange" radius="1.2" position="-3 1 -5"></a-torus-knot>
-			<a-plane width="12" height="2" position="5 -1 -9"></a-plane>
+			<a-plane width="10" height="2" position="5 1 -9"></a-plane>
 			<a-text font="timesi-msdf.json" negate="false" value="Мізан Ірина, група ТНІм-22" color="black" width="10" position="-0.5 1 -6"></a-text>
 	 </a-scene>
 </html> 
