--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 				Звіт про виконання завдань з курсу
 				<p><a href="example01.html" target="_blank">Домашнє завдання 1 тижня</a>	
 				<p><a href="ARindex.html" target="_blank">Домашнє завдання 2 тижня</a>		
-				<p><a href="week3/ARindex03.html" target="_blank">Домашнє завдання 3 тижня</a>
+				<p><a href="ARindex03.html" target="_blank">Домашнє завдання 3 тижня</a>
 		</body>
 </html>
