--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 				<p><a href="example01.html" target="_blank">Домашнє завдання 1 тижня</a>	
 				<p><a href="ARindex.html" target="_blank">Домашнє завдання 2 тижня</a>		
 				<p><a href="ARindex03.html" target="_blank">Домашнє завдання 3 тижня</a>
+				<p><a href="week04/week04.html" target="_blank">Домашнє завдання 4 тижня</a>
 		</body>
 </html>
