--- a/week04/week04.html
+++ b/week04/week04.html
@@ -11,10 +11,10 @@
 								<a-box position='0 0.5 0' color="blue" depth="2" height="2" width="0.5"></a-box> 													</a-marker>
 						<a-marker preset="kanji">
 								<a-box position='0 0.5 0'color="red" depth="2" height="2" width="0.5"></a-box> 													</a-marker>
-						<a-marker type=''pattern" url="pattern-IM.patt">
-								<a-entity geometry="prlmitive: sphere; radius: 1.5" 
+						<a-marker type=''pattern" url="pattern-markerIM.patt">
+								<a-entity geometry="primitive: sphere; radius: 1.5" 
 										light="type: point; color: white; intensity: 2"
-										materials-color: white; shader: flat; src: images.jpg"
+										material="color: white; shader: flat; src: images.jpg"
 										position="0 0.5 0"></a-entity>
  						</a-marker>
 							<a-entity camera></a-entity>
