--- a/week04/week04.html
+++ b/week04/week04.html
@@ -6,24 +6,21 @@
 				<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 		<head>
    		 <body>
-    				<a-scene embedded arjs="trackingMethod: best;">
+    				<a-scene embedded arjs="trackingMethod: best; debag: false;">
 						<a-marker preset="hiro">
 								<a-entity> rotation="90 0 0" scale="0.5 0.5 0.5"
-										<a-box position='-1 0.5 0' color="blue" depth="2" height="2" width="0.5"></a-box> 	
+										<a-box position='0 0.5 0' color="blue" depth="4" height="4" width="0.5"></a-box> 	
 								</a-entity>
 						</a-marker>
 						<a-marker preset="kanji">
 								<a-entity> rotation="90 0 0" scale="0.5 0.5 0.5"
-										<a-box position='0 0.5 0' color="red" depth="2" height="2" width="0.5"></a-box> 													</a-entity>
+										<a-box position='0 0.5 0' color="red" depth="2" height="2" width="0.5"></a-box> 												</a-entity>
 						</a-marker>
-						<a-marker type=''pattern" url="pattern-markerIM.patt">
-								<a-entity geometry="primitive: sphere; radius: 1" 
-										light="type: point; color: white; intensity: 2"
-										material="color:green; shader: flat"
-										position="3 0 0">
-								</a-entity>
- 						</a-marker>
+						<a-marker type="pattern" url="../markers/pattern-IM.patt">
+								<a-box position='0.5 0.5 0' color="green" depth="1" height="1" width="1"></a-box>
+						</a-marker>
 							<a-entity camera></a-entity>
-    		  			  </a-scene>
+    		  		 </a-scene>
    		 </body>
 </html>
+
