--- a/week04/week04.html
+++ b/week04/week04.html
@@ -4,7 +4,7 @@
 		<head>
   				<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 				<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-		<head>
+		</head>
    		 <body>
     				<a-scene embedded arjs="trackingMethod: best; debag: false;">
 						<a-marker preset="hiro">
