--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 				<p><a href="ARindex.html" target="_blank">Домашнє завдання 2 тижня</a>		
 				<p><a href="ARindex03.html" target="_blank">Домашнє завдання 3 тижня</a>
 				<p><a href="week04/week04.html" target="_blank">Домашнє завдання 4 тижня</a>
+				<p><a href="week05/week05.html" target="_blank">Домашнє завдання 5 тижня</a>
 		</body>
 </html>
