--- a/week05/SunSystem.html
+++ b/week05/SunSystem.html
@@ -1,12 +1,14 @@
-﻿<html>
+﻿﻿<html>
 	<head>
-		<script src="../aframe/aframe.min.js"></script>
-		<script src="planet.js"></script>
+			<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+			<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+			<script src="../aframe/aframe.min.js"></script>
+			<script src="planet.js"></script>
 	</head>
 	<body>
 		<a-scene>
-				<a-sky color="black" radius=1500></a-sky>
-				<a-camera position="0 0 600" cursor-visible="true" cursorscale="2" cursor-color="#0095DD" 												 cursor-opacity="0.5"></a-camera>
+			<a-marker preset="hiro">
+								<a-camera position="0 0 600" cursor-visible="true" cursorscale="2" cursor-color="#0095DD" 												 cursor-opacity="0.5"></a-camera>
 				<a-entity geometry="primitive: sphere; radius: 20.510" material="src: 2k_sun.jpg" 
 								animation="property: rotation; to: 0 360 0; loop true; dur: 9000"
 								planet="dist: 0; mass: 1.989e30; name:Sun"></a-entity>
@@ -30,7 +32,7 @@
 				<a-entity geometry="primitive: sphere; radius: 69.911" material="src: 2k_jupiter.jpg" 
 								animation="property: rotation; to: 0 360 0; loop true; dur: 9000"
 								planet="dist: 780.570e9; mass: 1.8982e27; T: 4332; name: Jupiter"></a-entity>
-			
+			</a-marker>
  				<a-entity main></a-entity>
 		</a-scene>
 	</body>
