--- a/week05/SunSystem.html
+++ b/week05/SunSystem.html
@@ -8,7 +8,7 @@
 	<body>
 		<a-scene>
 			<a-marker preset="hiro">
-								<a-camera position="0 0 600" cursor-visible="true" cursorscale="2" cursor-color="#0095DD" cursor-opacity="0.5"></a-camera>
+								<a-camera position="0 0 1200" cursor-visible="true" cursorscale="2" cursor-color="#0095DD" cursor-opacity="0.5"></a-camera>
 									<a-entity geometry="primitive: sphere; radius: 20.510" material="src: 2k_sun.jpg" 
 													animation="property: rotation; to: 0 360 0; loop true; dur: 9000"
 													planet="dist: 0; mass: 1.989e30; name:Sun"></a-entity>
@@ -36,15 +36,15 @@
 													planet="dist: 780.570e9; mass: 1.8982e27; T: 4332; name: Jupiter"></a-entity>
 
 
-									<a-entity geometry="primitive: sphere; radius: 60.268" material="src: 2k_earth_daymap.jpg" 
+									<a-entity geometry="primitive: sphere; radius: 60.268" material="src: 2k_saturn.jpg" 
 													animation="property: rotation; to: 0 360 0; loop true; dur: 9000"
 													planet="dist: 1433.449e9; mass: 5.685e26; T: 10585; name: Saturn"></a-entity>
 
-									<a-entity geometry="primitive: sphere; radius: 25.56" material="src: 2k_earth_daymap.jpg" 
+									<a-entity geometry="primitive: sphere; radius: 25.56" material="src: 2k_uranus.jpg" 
 													animation="property: rotation; to: 0 360 0; loop true; dur: 9000"
 													planet="dist: 276.679e9; mass: 8.6810e25; T: 30660; name: Uranus"></a-entity>
 
-									<a-entity geometry="primitive: sphere; radius: 24.764" material="src: 2k_earth_daymap.jpg" 
+									<a-entity geometry="primitive: sphere; radius: 24.764" material="src: 2k_neptune.jpg" 
 													animation="property: rotation; to: 0 360 0; loop true; dur: 9000"
 													planet="dist: 4503.443e9; mass: 1.0243e26; T: 60144; name: Neptune"></a-entity>
 			</a-marker>
