--- a/week05/sun.html
+++ b/week05/sun.html
@@ -7,7 +7,7 @@
 	<body>
 		<a-scene>
 				<a-sky color="black" radius=1500></a-sky>
-				<a-camera position="0 0 600" cursor-visible="true" cursorscale="2" cursor-color="#0095DD" 												 cursor-opacity="0.5"></a-camera>
+				<a-camera position="0 0 600" cursor-visible="true" cursorscale="2" cursor-color="#0095DD" cursor-opacity="0.5"></a-camera>												 cursor-opacity="0.5"></a-camera>
 				<a-entity geometry="primitive: sphere; radius: 20.510" material="src: 2k_sun.jpg" 
 								animation="property: rotation; to: 0 360 0; loop true; dur: 9000"
 								planet="dist: 0; mass: 1.989e30; name:Sun"></a-entity>
