--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 				<p><a href="ARindex03.html" target="_blank">Домашнє завдання 3 тижня</a>
 				<p><a href="week04/week04.html" target="_blank">Домашнє завдання 4 тижня</a>
 				<p><a href="week05/sun.html" target="_blank">Домашнє завдання 5 тижня</a>
+				<p><a href="week05/sunAR.html" target="_blank">Домашнє завдання 5 тижняAR</a>
 		</body>
 </html>
