--- a/week05/sunAR.html
+++ b/week05/sunAR.html
@@ -50,7 +50,7 @@
 													planet="dist: 4503.443e9; mass: 1.0243e26; T: 60144; name: Neptune"></a-entity
 						</a-marker>
 						
-
+							<a-entity main></a-entity>
 							<a-entity camera></a-entity>
     		  			  </a-scene>
    		 </body>
