--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 				<p><a href="ARindex03.html" target="_blank">Домашнє завдання 3 тижня</a>
 				<p><a href="week04/week04.html" target="_blank">Домашнє завдання 4 тижня</a>
 				<p><a href="week05/SunAR.html" target="_blank">Домашнє завдання 5 тижня</a>
+				<p><a href="week06/week06.html" target="_blank">Домашнє завдання 6 тижня</a>
 		</body>
 </html>
