--- a/week06/week06.html
+++ b/week06/week06.html
@@ -18,7 +18,15 @@
 						</a-marker>
 						<a-marker type="pattern" url="../assets/pattern-letterC.patt" id="C" registerevents>
 								<a-sphere radius="0.10" color="green"></a-sphere>
-								<a-entity id="lineAC"></a-entity>
+								<a-entity id="lineCD"></a-entity>
+						</a-marker>
+						<a-marker type="pattern" url="../assets/pattern-letterD.patt" id="D" registerevents>
+								<a-sphere radius="0.10" color="green"></a-sphere>
+								<a-entity id="lineDF"></a-entity>
+						</a-marker>
+						<a-marker type="pattern" url="../assets/pattern-letterF.patt" id="F" registerevents>
+								<a-sphere radius="0.10" color="green"></a-sphere>
+								<a-entity id="lineFA"></a-entity>
 						</a-marker>
 					<a-entity run></a-entity>
 					<a-camera-static/>
