--- a/week07/threejs_first.html
+++ b/week07/threejs_first.html
@@ -10,5 +10,8 @@
 		</script>
 	</head>
 	<body>
+			<canvas id="Canvas"></canvas>
+			<script src="three.js-dev/build/three.js"></script>
+			<a href="threejs_first.html" target="_blank"></a>
 	</body>
 </html>
