--- a/week07/threejs_first.html
+++ b/week07/threejs_first.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 			<canvas id="Canvas"></canvas>
-			<script src="three.js-dev/build/three.js"></script>
+			<script src="../three/three.js"></script>
 			<a href="threejs_first.html" target="_blank"></a>
 	</body>
 </html>
