--- a/week06/week06.html
+++ b/week06/week06.html
@@ -29,7 +29,7 @@
 								<a-entity id="lineFA"></a-entity>
 						</a-marker>
 					<a-entity run></a-entity>
-					<a-camera-static/>
+					<a-entity camera></a-entity>
     		  		</a-scene>
    		 </body>
 </html>
