--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 				<p><a href="week05/SunAR.html" target="_blank">Домашнє завдання 5 тижня</a>
 				<p><a href="week06/week06.html" target="_blank">Домашнє завдання 6 тижня</a>
 				<p><a href="week07/threejs_first.html" target="_blank">Домашнє завдання 7 тижня</a>
+				<p><a href="week09/example_nft.html" target="_blank">Природне зображення як маркер</a>
 		</body>
 </html>
