--- a/week09/example_nft.html
+++ b/week09/example_nft.html
@@ -26,7 +26,7 @@
 				   
 				  	<a-nft registerevents
 					      type="nft"
-					      url="cat_real"
+					      url="week09/cat_real"
 					      smooth="true"
 					      smoothCount="10"
 					      smoothTolerance=".01"
