--- a/week09/example_nft.html
+++ b/week09/example_nft.html
@@ -31,7 +31,7 @@
 					      smoothCount="10"
 					      smoothTolerance=".01"
 					      smoothThreshold="5">
-							<a-sphere color="red"></a-sphere>
+							<a-sphere color="red" radius=100></a-sphere>
 					</a-nft>
 				    <a-entity camera></a-entity>
 				  </a-scene>
