--- a/week09/example_nft.html
+++ b/week09/example_nft.html
@@ -24,7 +24,7 @@
 				  	  renderer="logarithmicDepthBuffer: true;"
 				  	  embedded arjs="trackingMethod: best; ">
 				   
-				  	<a-nft registerevents
+				  	<a-nft emitevents registerevents
 					      type="nft"
 					      url="week09/pinball"
 					      smooth="true"
