--- a/week09/example_nft.html
+++ b/week09/example_nft.html
@@ -27,16 +27,20 @@
 				  	<a-nft emitevents registerevents
 					      type="nft"
 					      url="week09/pinball"
-							size="0.1"
 					      >
-							<a-sphere color="red" radius=100></a-sphere>
+							<a-sphere color="red" radius=50></a-sphere>
 					</a-nft>
 					<a-nft emitevents registerevents
 					      type="nft"
 					      url="week09/cat_real"
-							size="0.1"
 					      >
 							<a-sphere color="green" radius=50></a-sphere>
+					</a-nft>
+					<a-nft emitevents registerevents
+					      type="nft"
+					      url="week09/face"
+					      >
+							<a-sphere color="blue" radius=50></a-sphere>
 					</a-nft>
 				    <a-entity camera></a-entity>
 				  </a-scene>
