--- a/week09/example_nft.html
+++ b/week09/example_nft.html
@@ -26,13 +26,13 @@
 				   
 				  	<a-nft emitevents registerevents
 					      type="nft"
-					      url="week09/pinball"
+					      url="pinball"
 					      >
 							<a-sphere color="red" radius=50></a-sphere>
 					</a-nft>
 					<a-nft emitevents registerevents
 					      type="nft"
-					      url="week09/cat_real"
+					      url="cat_real"
 					      >
 							<a-sphere color="green" radius=50></a-sphere>
 					</a-nft>
