--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<p><a href="week05/SunAR.html" target="_blank">Домашнє завдання 5 тижня</a>
 				<p><a href="week06/week06.html" target="_blank">Домашнє завдання 6 тижня</a>
 				<p><a href="week07/threejs_first.html" target="_blank">Домашнє завдання 7 тижня</a>
-				<p><a href="week09/example_nft.html" target="_blank">Природне зображення як маркер</a>
+				<p><a href="week08/example_nft.html" target="_blank">Природне зображення як маркер (AR.js)</a>
+				<p><a href="week08/example_nft_mindar.html" target="_blank">Природне зображення як маркер (MindAR)</a>
 		</body>
 </html>
