--- a/week08/example_nft_mindar.html
+++ b/week08/example_nft_mindar.html
@@ -8,7 +8,7 @@
 			    <a-scene mindar-image="imageTargetSrc: cal.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 			 		      
 						<a-entity mindar-image-target="targetIndex: 0">
-							<a-sphere color="red" radius=1></a-sphere>
+							<a-sphere color="red" radius=0,25 position="-0.5 0 0"></a-sphere>
 					       </a-entity>
 
   					<a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
