--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 				<p><a href="week07/threejs_first.html" target="_blank">Домашнє завдання 7 тижня</a>
 				<p><a href="week08/example_nft.html" target="_blank">Природне зображення як маркер (AR.js)</a>
 				<p><a href="week08/example_nft_mindar.html" target="_blank">Природне зображення як маркер (MindAR)</a>
+				<p><a href="week09/ARindex.html" target="_blank">Текстура у A-Frame</a>
 		</body>
 </html>
