--- a/week09/ARindex.html
+++ b/week09/ARindex.html
@@ -5,7 +5,7 @@
   		<a-scene>
 			<a-assets>
 					<img id="sky" src="../assets/360-degree-beach-panorama-1217568.jpg">
-					<img id="sky" src="../assets/plants.jpg">
+					<img id="plant" src="../assets/plants.jpg">
 			</a-assets>
  			<a-sky src="#sky"></a-sky>
 			<a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus>
