--- a/week09/ARindex.html
+++ b/week09/ARindex.html
@@ -8,7 +8,7 @@
 					<img id="plant" src="../assets/plants.jpg">
 			</a-assets>
  			<a-sky src="#sky"></a-sky>
-			<a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus>
+			<a-torus position="-2 1 -5" color="green" radius="1.2" src="../assets/HIRO.jpg"></a-torus>
 			<a-plane "width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
 			<a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
 			<a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
