--- a/week09/ARindex.html
+++ b/week09/ARindex.html
@@ -6,6 +6,7 @@
 			<a-assets>
 					<img id="sky" src="../assets/360-degree-beach-panorama-1217568.jpg">
 					<img id="plant" src="../assets/plants.jpg">
+					<video id="antarctica" autoplay loop="true" src="antarctica.mp4"> </video>
 			</a-assets>
  			<a-sky src="#sky"></a-sky>
 			<a-torus position="-2 1 -5" color="green" radius="1.2" src="../assets/HIRO.jpg"></a-torus>
