--- a/week09/ARindex.html
+++ b/week09/ARindex.html
@@ -6,9 +6,10 @@
 			<a-assets>
 					<img id="sky" src="../assets/360-degree-beach-panorama-1217568.jpg">
 					<img id="plant" src="../assets/plants.jpg">
-					<video id="antarctica" autoplay loop="true" src="antarctica.mp4"> </video>
+					<video id="tsunami" autoplay loop="true" src="../assets/videoplayback.mp4"> </video>
 			</a-assets>
  			<a-sky src="#sky"></a-sky>
+			<a-videosphere src="#tsunami"></a-videosphere>
 			<a-torus position="-2 1 -5" color="green" radius="1.2" src="../assets/HIRO.jpg"></a-torus>
 			<a-plane "width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
 			<a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
