--- a/week09/ARindex.html
+++ b/week09/ARindex.html
@@ -13,7 +13,7 @@
  			<a-sky color="white"></a-sky>
 			<!--<a-videosphere src="#tsunami"></a-videosphere>-->
 			<a-video src="#birds" width="16" height="9" position="0 5 -20"></a-video>
-			<a-gltf-model src="#tree" position="2 5 -3"></a-gltf-model>
+			<a-gltf-model src="#tree" position="0.5 1 -1" scale="1 1 1"></a-gltf-model>
 			<a-torus position="-2 1 -5" color="green" radius="1.2" src="../assets/HIRO.jpg"></a-torus>
 			<a-plane "width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
 			<a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
