--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 				<p><a href="week08/example_nft.html" target="_blank">Природне зображення як маркер (AR.js)</a>
 				<p><a href="week08/example_nft_mindar.html" target="_blank">Природне зображення як маркер (MindAR)</a>
 				<p><a href="week09/ARindex.html" target="_blank">Текстура у A-Frame</a>
-				<p><a href="week09/ARindex.html" target="_blank">Текстура у Three.js</a>
+				<p><a href="week09/threejs_second.html" target="_blank">Текстура у Three.js</a>
 		</body>
 </html>
