--- a/week09/threejs_second.html
+++ b/week09/threejs_second.html
@@ -12,7 +12,7 @@
 	<body>
 		<!--<script src="../three/three.js"></script>-->
 		<video id="video" loop crossOrigin="anonymous" playsinline style="display:none">
-				<source src="assets/birds.mp4">
+				<source src="/assets/birds.mp4">
 		</video>
 	</body>
 </html>
