--- a/week09/threejs_second.html
+++ b/week09/threejs_second.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -12,21 +12,26 @@
 				transform: translateX(-50%);
 			}
 		</style>
-				<script type="importmap">
-				  {
-				    "imports": {
-				      "three": "https://unpkg.com/three/build/three.module.js",
-				      "three/addons/": "https://unpkg.com/three/examples/jsm/"
-				    }
-				  }
-</script>
+		<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+		<script type="importmap">
+		  {
+		    "imports": {
+		      "three": "https://unpkg.com/three/build/three.module.js",
+		      "three/addons/": "https://unpkg.com/three/examples/jsm/"
+		    }
+		  }
+		</script>
 		<script type="module" src="code.js">
 		</script>
 	</head>
 	<body>
 		<!--<script src="../three/three.js"></script>-->
 		<video id="video" loop crossOrigin="anonymous" playsinline style="display:none" muted>
-				<source src="/assets/birds.mp4">
+				<source src="/assets/birds.mkv">
+		</video>
+		<video id="video2" loop crossOrigin="anonymous" playsinline style="display:none" muted>
+				<source src="/assets/videoplayback.mkv">
 		</video>
 
 		<button id="press">Натисни на мене</button>
