--- a/week09/threejs_second.html
+++ b/week09/threejs_second.html
@@ -28,10 +28,10 @@
 	<body>
 		<!--<script src="../three/three.js"></script>-->
 		<video id="video" loop crossOrigin="anonymous" playsinline style="display:none" muted>
-				<source src="/assets/birds.mkv">
+				<source src="/assets/birds.mp4">
 		</video>
 		<video id="video2" loop crossOrigin="anonymous" playsinline style="display:none" muted>
-				<source src="/assets/videoplayback.mkv">
+				<source src="/assets/videoplayback.mp4">
 		</video>
 
 		<button id="press">Натисни на мене</button>
