--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 				<p><a href="week08/example_nft_mindar.html" target="_blank">Природне зображення як маркер (MindAR)</a>
 				<p><a href="week09/ARindex.html" target="_blank">Текстура у A-Frame</a>
 				<p><a href="week09/threejs_second.html" target="_blank">Текстура у Three.js</a>
+				<p><a href="week10/controls.html" target="_blank">360-градусний огляд сцени у Three.js</a>
 		</body>
 </html>
