--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 				<p><a href="week09/ARindex.html" target="_blank">Текстура у A-Frame</a>
 				<p><a href="week09/threejs_second.html" target="_blank">Текстура у Three.js</a>
 				<p><a href="week10/controls.html" target="_blank">360-градусний огляд сцени у Three.js</a>
+				<p><a href="week11/geo.html" target="_blank">A-Frame + GPS</a>
 		</body>
 </html>
