--- a/week11/geo.html
+++ b/week11/geo.html
@@ -8,14 +8,14 @@
 		</head>
 		<body>
 				<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true' renderer='antialias: true; alpha: true'>
-				    <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
+				    <a-camera gps-new-camera='gpsMinDistance: 500'></a-camera>
 				    <a-box color="red" gps-new-entity-place="latitude: 47.998397593501416; longitude: 33.480928822182335" scale="10 10 10"></a-box>
 				<!-- зупинка -->
 					<a-box color="green" gps-new-entity-place="latitude: 47.99854835680498; longitude: 33.48145989953349" scale="10 10 10"></a-box>
 					<!-- магазин -->
 					<a-sphere color="blue" gps-new-entity-place="latitude: 47.99865245501935; longitude: 33.48148135720424" scale="5 5 5"></a-sphere>
 					<!-- край будівлі 1 -->
-					<a-sphere color="red" gps-new-entity-place="latitude: 47.9985734839794; longitude: 33.48201243455541" scale="5 5 5"></a-sphere>
+					<a-sphere color="yellow" gps-new-entity-place="latitude: 47.9985734839794; longitude: 33.48201243455541" scale="5 5 5"></a-sphere>
 					<!-- край будівлі 2 -->
 				</a-scene>
 		</body>
