--- a/week11/geo2.html
+++ b/week11/geo2.html
@@ -9,6 +9,6 @@
 <body>
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true">
         <a-camera gps-camera="simulateLatitude: 47.90769054496873; simulateLongitude: 33.411458794814536" rotation-reader></a-camera>
-        <a-text value="This will always face the user." look-at="[gps-camera]" scale="75 75 75" gps-entity-place="latitude: 47.9077; longitude: 33.411458794814536;"></a-text>
+        <a-text value="This will always face the user." rotate="-90 0 0" look-at="[gps-camera]" scale="50 50 50" gps-entity-place="latitude: 47.9078; longitude: 33.411458794814536;"></a-text>
     </a-scene>
 </body>
