--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 				<p><a href="week10/controls.html" target="_blank">360-градусний огляд сцени у Three.js</a>
 				<p><a href="week11/geo.html" target="_blank">A-Frame + GPS</a>
 				<p><a href="week11/geo2.html" target="_blank">A-Frame + GPS (simulated)</a>
+				<p><a href="week11/index.html" target="_blank">Three.js + GPS (simulated)</a>
 		</body>
 </html>
