--- a/week11/index.html
+++ b/week11/index.html
@@ -6,7 +6,7 @@
     <!--<canvas id="canvas1" style='background-color: black; width:100%; height:100%; display:block'></canvas>-->
     <script src='../three/three.js'></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
-    <script type="module" src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
