--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
 		</head>
 		<body>
 				Звіт про виконання завдань з курсу
-				<p><a href="example01.html" target="_blank">Домашнє завдання 1 тижня</a>	
-				<p><a href="ARindex.html" target="_blank">Домашнє завдання 2 тижня</a>		
-				<p><a href="ARindex03.html" target="_blank">Домашнє завдання 3 тижня</a>
-				<p><a href="week04/week04.html" target="_blank">Домашнє завдання 4 тижня</a>
-				<p><a href="week05/SunAR.html" target="_blank">Домашнє завдання 5 тижня</a>
-				<p><a href="week06/week06.html" target="_blank">Домашнє завдання 6 тижня</a>
-				<p><a href="week07/threejs_first.html" target="_blank">Домашнє завдання 7 тижня</a>
-				<p><a href="week08/example_nft.html" target="_blank">Природне зображення як маркер (AR.js)</a>
-				<p><a href="week08/example_nft_mindar.html" target="_blank">Природне зображення як маркер (MindAR)</a>
-				<p><a href="week09/ARindex.html" target="_blank">Текстура у A-Frame</a>
-				<p><a href="week09/threejs_second.html" target="_blank">Текстура у Three.js</a>
-				<p><a href="week10/controls.html" target="_blank">360-градусний огляд сцени у Three.js</a>
-				<p><a href="week11/geo.html" target="_blank">A-Frame + GPS</a>
-				<p><a href="week11/geo2.html" target="_blank">A-Frame + GPS (simulated)</a>
-				<p><a href="week11/index.html" target="_blank">Three.js + GPS (simulated)</a>
+			<ul>	
+				<li><a href="example01.html" target="_blank">Домашнє завдання 1 тижня</a></li>
+				<li><a href="ARindex.html" target="_blank">Домашнє завдання 2 тижня</a></li>
+				<li><a href="ARindex03.html" target="_blank">Домашнє завдання 3 тижня</a></li>
+				<li><a href="week04/week04.html" target="_blank">Домашнє завдання 4 тижня</a></li>
+				<li><a href="week05/SunAR.html" target="_blank">Домашнє завдання 5 тижня</a></li>
+				<li><a href="week06/week06.html" target="_blank">Домашнє завдання 6 тижня</a></li>
+				<li><a href="week07/threejs_first.html" target="_blank">Домашнє завдання 7 тижня</a></li>
+				<li><a href="week08/example_nft.html" target="_blank">Природне зображення як маркер (AR.js)</a></li>
+				<li><a href="week08/example_nft_mindar.html" target="_blank">Природне зображення як маркер (MindAR)</a></li>
+				<li><a href="week09/ARindex.html" target="_blank">Текстура у A-Frame</a></li>
+				<li><a href="week09/threejs_second.html" target="_blank">Текстура у Three.js</a></li>
+				<li><a href="week10/controls.html" target="_blank">360-градусний огляд сцени у Three.js</a></li>
+				<li><a href="week11/geo.html" target="_blank">A-Frame + GPS</a></li>
+				<li><a href="week11/geo2.html" target="_blank">A-Frame + GPS (simulated)</a></li>
+				<li><a href="week11/index.html" target="_blank">Three.js + GPS (simulated)</a></li>
+
+				<li><a href="week13/cubes.html" target="_blank">Three.js + AR.js</a></li>
+			</ul>
 		</body>
 </html>
