--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 				<li><a href="week11/geo2.html" target="_blank">A-Frame + GPS (simulated)</a></li>
 				<li><a href="week11/index.html" target="_blank">Three.js + GPS (simulated)</a></li>
 
-				<li><a href="week13/cubes.html" target="_blank">Three.js + AR.js</a></li>
+				<li><a href="week13/cubes.html" target="_blank">Three.js + AR.js (1)</a></li>
+				<li><a href="week13/exp2.html" target="_blank">Three.js + AR.js (2)</a></li>
 			</ul>
 		</body>
 </html>
