--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<li><a href="week12/tm_exp2.html" target="_blank">Handpose</a></li>
 				<li><a href="week13/cubes.html" target="_blank">Three.js + AR.js (1)</a></li>
 				<li><a href="week13/exp2.html" target="_blank">Three.js + AR.js (2)</a></li>
+				<li><a href="week14/face.html" target="_blank">Three.js + MindAR + Face</a></li>
 			</ul>
 		</body>
 </html>
