--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 				<li><a href="week13/cubes.html" target="_blank">Three.js + AR.js (1)</a></li>
 				<li><a href="week13/exp2.html" target="_blank">Three.js + AR.js (2)</a></li>
 				<li><a href="week14/face.html" target="_blank">Three.js + MindAR + Face</a></li>
+				<li><a href="week14/facemash.html" target="_blank">Three.js + MindAR + Face Mesh</a></li>
+				<li><a href="week14/facemasvr.html" target="_blank">Three.js + VR + Face Mesh</a></li>
 			</ul>
 		</body>
 </html>
