--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<li><a href="week13/exp2.html" target="_blank">Three.js + AR.js (2)</a></li>
 				<li><a href="week14/face.html" target="_blank">Three.js + MindAR + Face</a></li>
 				<li><a href="week14/facemash.html" target="_blank">Three.js + MindAR + Face Mesh</a></li>
-				<li><a href="week14/facemasvr.html" target="_blank">Three.js + VR + Face Mesh</a></li>
+				<li><a href="week14/facemashvr.html" target="_blank">Three.js + VR + Face Mesh</a></li>
 			</ul>
 		</body>
 </html>
