--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 				<li><a href="week14/face.html" target="_blank">Three.js + MindAR + Face</a></li>
 				<li><a href="week14/facemesh.html" target="_blank">Three.js + MindAR + Face Mesh</a></li>
 				<li><a href="week14/facemeshvr.html" target="_blank">Three.js + VR + Face Mesh</a></li>
+				<li><a href="week15/webxr-vr.html" target="_blank">WebXR + VR</a></li>
+				<li><a href="week15/webxr-ar.html" target="_blank">WebXR + AR</a></li>
 			</ul>
 		</body>
 </html>
