--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				<li><a href="week14/facemeshvr.html" target="_blank">Three.js + VR + Face Mesh</a></li>
 				<li><a href="week15/webxr-vr.html" target="_blank">WebXR + VR</a></li>
 				<li><a href="week15/webxr-ar.html" target="_blank">WebXR + AR</a></li>
+				<li><a href="week15/webxr-ar2.html" target="_blank">WebXR + AR (second example)</a></li>
 			</ul>
 		</body>
 </html>
