--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 				<li><a href="week05/SunAR.html" target="_blank">Домашнє завдання 5 тижня</a></li>
 				<li><a href="week06/week06.html" target="_blank">Домашнє завдання 6 тижня</a></li>
 				<li><a href="week07/threejs_first.html" target="_blank">Домашнє завдання 7 тижня</a></li>
+				<li><a href="lab01/lab1.html" target="_blank">Лабораторна робота 1</a></li>
 				<li><a href="week08/example_nft.html" target="_blank">Природне зображення як маркер (AR.js)</a></li>
 				<li><a href="week08/example_nft_mindar.html" target="_blank">Природне зображення як маркер (MindAR)</a></li>
 				<li><a href="week09/ARindex.html" target="_blank">Текстура у A-Frame</a></li>
