--- a/lab01/lab1.html
+++ b/lab01/lab1.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 
 <html>
- 		<script src="../aframe/aframe.min.js"></script>
+ 		<script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
  		<a-scene>
  			<a-sky color="grey"></a-sky>
  			<a-box depth="2" height="4" width="0.5" position="-2 -1 -5" srs="../assets/brick_bump.jpg"></a-box>
