--- a/lab01/lab1.html
+++ b/lab01/lab1.html
@@ -4,9 +4,10 @@
  		<script src="../aframe/aframe.min.js"></script>
  		<a-scene>
  			<a-sky color="grey"></a-sky>
- 			<a-box depth="2" height="2" width="5" position="0 0 -5" src="../assets/brick_bump.jpg" rotation="0 0 0"></a-box>
- 			<a-box depth="4" height="2" width="2" position="-3 0 -5" src="../assets/brick_diffuse.jpg" rotation="0 0 0"></a-box>
- 			<a-box depth="5" height="2" width="2" position="3 0 -5" src="../assets/brick_roughness.jpg" rotation="0 0 0"></a-box>
+ 			<a-box depth="2" height="2" width="6" position="0 0 -5" src="../assets/brick_bump.jpg" rotation="0 0 0"></a-box>
+ 			<a-box depth="4" height="2" width="2" position="-3.5 0 -10" src="../assets/brick_diffuse.jpg" rotation="0 0 0"></a-box>
+ 			<a-box depth="5" height="2" width="2" position="3.5 0 -10" src="../assets/brick_roughness.jpg" rotation="0 0 0"></a-box>
+ 			<a-box depth="2" height="2" width="1" position="0 0 -10" src="../assets/brick_bump.jpg" rotation="0 0 0"></a-box>
 			<!--<a-torus position="-2 1 -5" color="green" radius="1.2" animation="property: components.material.material.color;
 type: color; from: green; to: red; loop: true; dur: 10000"></a-torus>
 			<a-plane src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/illustration/758px-Canestra_di_frutta_(Caravaggio).jpg"  width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
@@ -15,5 +16,6 @@ type: color; from: green; to: red; loop: true; dur: 10000"></a-torus>
 			<a-torus-knot color="orange" radius="1.2" position="-3 1 -5"></a-torus-knot>
 			<a-plane width="11" height="2" position="3 1 -9"></a-plane>
 			<a-text font="timesi-msdf.json" negate="false" value="Мізан Ірина, група ТНІм-22" color="black" width="10" position="-0.5 1 -6"></a-text>-->
-	 </a-scene>
+			<a-entity run></a-entity>
+			</a-scene>
 </html> 
