--- a/lab01/lab1.html
+++ b/lab01/lab1.html
@@ -2,12 +2,14 @@
 
 <html>
  		<script src="../aframe/aframe.min.js"></script>
- 		<a-scene>
- 			<a-sky color="grey"></a-sky>
- 			<a-box depth="2" height="2" width="6" position="0 0 -5" src="../assets/brick_bump.jpg" rotation="0 0 0"></a-box>
- 			<a-box depth="4" height="2" width="2" position="-4 0 -6" src="../assets/brick_diffuse.jpg" rotation="0 0 0"></a-box>
- 			<a-box depth="5" height="2" width="2" position="4 0 -6,75" src="../assets/brick_roughness.jpg" rotation="0 0 0"></a-box>
- 			<a-box depth="2" height="2" width="1" position="0 0 -7" src="../assets/brick_bump.jpg" rotation="0 0 0"></a-box>
+ 		<a-scene embedded arjs="trackingMethod: best;">
+ 			<a-marker type="pattern" url="../assets/pattern-Coat_of_Arms_of_Kryvyy_Rih.patt">
+ 				<a-sky color="grey"></a-sky>
+		 			<a-box depth="2" height="2" width="6" position="0 0 -5" src="../assets/brick_bump.jpg" rotation="0 0 0"></a-box>
+		 			<a-box depth="4" height="2" width="2" position="-4 0 -6" src="../assets/brick_diffuse.jpg" rotation="0 0 0"></a-box>
+		 			<a-box depth="5" height="2" width="2" position="4 0 -7" src="../assets/brick_roughness.jpg" rotation="0 0 0"></a-box>
+		 			<a-box depth="2" height="2" width="1" position="0 0 -7" src="../assets/brick_bump.jpg" rotation="0 0 0"></a-box>
+		 	</a-marker>
 			<!--<a-torus position="-2 1 -5" color="green" radius="1.2" animation="property: components.material.material.color;
 type: color; from: green; to: red; loop: true; dur: 10000"></a-torus>
 			<a-plane src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/illustration/758px-Canestra_di_frutta_(Caravaggio).jpg"  width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
