--- a/lab01/lab1.html
+++ b/lab01/lab1.html
@@ -19,5 +19,6 @@ type: color; from: green; to: red; loop: true; dur: 10000"></a-torus>
 			<a-plane width="11" height="2" position="3 1 -9"></a-plane>
 			<a-text font="timesi-msdf.json" negate="false" value="Мізан Ірина, група ТНІм-22" color="black" width="10" position="-0.5 1 -6"></a-text>-->
 			<a-entity run></a-entity>
+			<a-entity camera></a-entity>
 			</a-scene>
 </html> 
