--- a/ARindex03.html
+++ b/ARindex03.html
@@ -10,12 +10,12 @@
 						<a-marker preset="hiro">
 								<a-torus position="0 0.5 0" color="green" radius="0.5" animation="property: components.material.material.color;
 type: color; from: green; to: red; loop: true; dur: 10000"></a-torus>
-								<a-plane  "width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple" src="https://raw.githubusercontent.com/aframevr/sampleassets/master/assets/images/illustration/758pxCanestra_di_frutta_(Caravaggio).jpg"></a-plane>
+								<a-plane src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/illustration/758px-Canestra_di_frutta_(Caravaggio).jpg" "width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple"></a-plane>
 								<a-cylinder color="yellow" height="2" radius="0.5" position="0 0 0"></a-cylinder>
 								<a-cylinder color="blue" height="2" radius="0.5" position="1 0 0"></a-cylinder>
 								<a-torus-knot color="orange" radius="0.5" position="1 0.5 0"></a-torus-knot>
 								<a-plane  width="2.5" height="1.5" position="0 1 -1" src="https://raw.githubusercontent.com/aframevr/sampleassets/master/assets/images/uvgrid/UV_Grid_Sm.jpg"></a-plane>
-								<a-text font="timesi-msdf.json" negate="false" value="Ì³çàí ²ðèíà, ãðóïà ÒÍ²ì-22" color="black" width="3" position="-1 0.5 -1"></a-text> 						</a-marker>
+								<a-text font="timesi-msdf.json" negate="false" value="ÐœÑ–Ð·Ð°Ð½ Ð†Ñ€Ð¸Ð½Ð°, Ð³Ñ€ÑƒÐ¿Ð° Ð¢ÐÐ†Ð¼-22" color="black" width="3" position="-1 0.5 -1"></a-text> 						</a-marker>
 							<a-entity camera></a-entity>
     		  			  </a-scene>
    		 </body>
