--- a/ARindex03.html
+++ b/ARindex03.html
@@ -15,7 +15,7 @@ type: color; from: green; to: red; loop: true; dur: 10000"></a-torus>
 								<a-cylinder color="blue" height="2" radius="0.5" position="1 0 0"></a-cylinder>
 								<a-torus-knot color="orange" radius="0.5" position="1 0.5 0"></a-torus-knot>
 								<a-plane  width="2.5" height="1.5" position="0 1 -1" src="https://raw.githubusercontent.com/aframevr/sampleassets/master/assets/images/uvgrid/UV_Grid_Sm.jpg"></a-plane>
-								<a-text font="timesi-msdf.json" negate="false" value="Мізан Ірина, група ТНІм-22" color="black" width="3" position="-1 0.5 -1"></a-text> 						</a-marker>
+								<a-text font="timesi-msdf.json" negate="false" value="Mizan Irina, gr.TNIm-22" color="black" width="3" position="-1 0.5 -1"></a-text> 						</a-marker>
 							<a-entity camera></a-entity>
     		  			  </a-scene>
    		 </body>
