--- a/ARindex03.html
+++ b/ARindex03.html
@@ -10,7 +10,7 @@
 						<a-marker preset="hiro">
 								<a-torus position="0 0.5 0" color="green" radius="0.5" animation="property: components.material.material.color;
 type: color; from: green; to: red; loop: true; dur: 10000"></a-torus>
-								<a-plane src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/illustration/758px-Canestra_di_frutta_(Caravaggio).jpg" "width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple"></a-plane>
+								<a-plane src="../assets/Caravaggio.jpg" "width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple"></a-plane>
 								<a-cylinder color="yellow" height="2" radius="0.5" position="0 0 0"></a-cylinder>
 								<a-cylinder color="blue" height="2" radius="0.5" position="1 0 0"></a-cylinder>
 								<a-torus-knot color="orange" radius="0.5" position="1 0.5 0"></a-torus-knot>
