--- a/week09/threejs_second.html
+++ b/week09/threejs_second.html
@@ -34,6 +34,6 @@
 				<source src="../assets/videoplayback.mp4">
 		</video>
 
-		<button id="press">Натисни на мене</button>
+		<button id="press" position="0 0 0">Натисни на мене</button>
 	</body>
 </html>
